implements all treatments controller functionalities and documentation
