# config/routes.rb
@@ -9,5 +9,5 @@ Rails.application.routes.draw do
 
   # Defines the root path route ("/")
   # root "posts#index"
-  resources :treatments, only: [:create]
+  resources :treatments, only: [:index, :create]
 end
